--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,13 @@
         android:theme="@style/Theme.Practice"
         tools:targetApi="31">
         <activity
-            android:name=".Linear_Layout_Example"
+            android:name=".ConstraintLayoutExample"
+            android:exported="false" />
+        <activity
+            android:name=".RelativeLayoutExample"
+            android:exported="false" />
+        <activity
+            android:name=".LinearLayoutExample"
             android:exported="false" />
         <activity
             android:name=".StatsActivity"
