--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,15 @@
         android:theme="@style/Theme.Practice"
         tools:targetApi="31">
         <activity
-            android:name=".TextInputLayoutExample"
-            android:parentActivityName=".MainActivity"
+            android:name=".CustomViewExample"
             android:exported="false" />
+        <activity
+            android:name=".CompoundComponentExample"
+            android:exported="false" />
+        <activity
+            android:name=".TextInputLayoutExample"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity3"
             android:exported="false"
